[gd_scene load_steps=22 format=3 uid="uid://c1b1vgh12jqww"]

[ext_resource type="Script" path="res://object_scenes/player/player.gd" id="1_7l8c2"]
[ext_resource type="Texture2D" uid="uid://bdal1quvajxp" path="res://object_scenes/player/sprites/layerHandBack.png" id="2_a2jo3"]
[ext_resource type="Texture2D" uid="uid://1ef0ri8u4vs4" path="res://item_resources/item_textures/pickaxeStone.png" id="2_sxcrt"]
[ext_resource type="PackedScene" uid="uid://cq6k7eeybndp6" path="res://object_scenes/lightmapCover/lightmap.tscn" id="3_37tb5"]
[ext_resource type="Texture2D" uid="uid://b6gsjyt0j3jus" path="res://object_scenes/player/sprites/layerShirt.png" id="3_vs5p5"]
[ext_resource type="Texture2D" uid="uid://l1hy80jqh3c8" path="res://object_scenes/player/sprites/layerPants.png" id="4_2l72k"]
[ext_resource type="Texture2D" uid="uid://4venxjq1gy4m" path="res://object_scenes/player/sprites/layerHead.png" id="5_hktle"]
[ext_resource type="Texture2D" uid="uid://c47fuirjhvx43" path="res://object_scenes/player/sprites/layerEye.png" id="6_uk1hk"]
[ext_resource type="Texture2D" uid="uid://bjd5c0gdm1qt2" path="res://object_scenes/player/sprites/layerEyeBlink.png" id="7_sxd0h"]
[ext_resource type="Texture2D" uid="uid://dei6me4j1chus" path="res://object_scenes/player/sprites/layerHandFront.png" id="8_0olu2"]
[ext_resource type="Texture2D" uid="uid://bbhygnshkya87" path="res://object_scenes/player/hand.png" id="10_pp7um"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8s1yf"]
size = Vector2(6, 6)

[sub_resource type="Animation" id="Animation_1pmq4"]
resource_name = "swing"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerHand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.18508, 0.785398]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pmhhj"]
_data = {
"swing": SubResource("Animation_1pmq4")
}

[sub_resource type="Animation" id="Animation_vctuh"]
resource_name = "fall"
length = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [5],
"method": &"setAllPlayerFrames"
}]
}

[sub_resource type="Animation" id="Animation_w13ke"]
resource_name = "idle"
length = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0],
"method": &"setAllPlayerFrames"
}]
}

[sub_resource type="Animation" id="Animation_hqg3u"]
resource_name = "jump"
length = 0.1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [6],
"method": &"setAllPlayerFrames"
}]
}

[sub_resource type="Animation" id="Animation_0sji6"]
resource_name = "walk"
length = 0.4
step = 0.01
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [1],
"method": &"setAllPlayerFrames"
}, {
"args": [2],
"method": &"setAllPlayerFrames"
}, {
"args": [3],
"method": &"setAllPlayerFrames"
}, {
"args": [4],
"method": &"setAllPlayerFrames"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BackItem:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -1), Vector2(0, 0), Vector2(0, -1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4n17m"]
_data = {
"fall": SubResource("Animation_vctuh"),
"idle": SubResource("Animation_w13ke"),
"jump": SubResource("Animation_hqg3u"),
"walk": SubResource("Animation_0sji6")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_dk4gh"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jcs3x"]
size = Vector2(6, 6)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 17
collision_priority = 8.0
platform_on_leave = 2
platform_floor_layers = 0
script = ExtResource("1_7l8c2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8s1yf")

[node name="BackItem" type="Sprite2D" parent="."]
position = Vector2(0, -1)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_sxcrt")
offset = Vector2(-5.333, -3.433)
flip_h = true
flip_v = true

[node name="PlayerLayers" type="CanvasGroup" parent="."]

[node name="handBack" type="Sprite2D" parent="PlayerLayers"]
modulate = Color(1, 0.784314, 0.333333, 1)
position = Vector2(0, 3)
texture = ExtResource("2_a2jo3")
offset = Vector2(0, -8)
hframes = 7

[node name="shirt" type="Sprite2D" parent="PlayerLayers"]
modulate = Color(1, 0.784314, 0.333333, 1)
position = Vector2(0, 3)
texture = ExtResource("3_vs5p5")
offset = Vector2(0, -8)
hframes = 7

[node name="pants" type="Sprite2D" parent="PlayerLayers"]
modulate = Color(1, 0.784314, 0.333333, 1)
position = Vector2(0, 3)
texture = ExtResource("4_2l72k")
offset = Vector2(0, -8)
hframes = 7

[node name="head" type="Sprite2D" parent="PlayerLayers"]
modulate = Color(1, 0.784314, 0.333333, 1)
position = Vector2(0, 3)
texture = ExtResource("5_hktle")
offset = Vector2(0, -8)
hframes = 7

[node name="eye" type="Sprite2D" parent="PlayerLayers"]
position = Vector2(0, 3)
texture = ExtResource("6_uk1hk")
offset = Vector2(0, -8)
hframes = 7

[node name="eyeBlink" type="Sprite2D" parent="PlayerLayers"]
visible = false
position = Vector2(0, 3)
texture = ExtResource("7_sxd0h")
offset = Vector2(0, -8)
hframes = 7

[node name="handFront" type="Sprite2D" parent="PlayerLayers"]
visible = false
modulate = Color(1, 0.784314, 0.333333, 1)
position = Vector2(0, 3)
texture = ExtResource("8_0olu2")
offset = Vector2(0, -8)
hframes = 7

[node name="HandRoot" type="Node2D" parent="."]

[node name="handSwing" type="AnimationPlayer" parent="HandRoot"]
libraries = {
"": SubResource("AnimationLibrary_pmhhj")
}

[node name="PlayerHand" type="Node2D" parent="HandRoot"]
position = Vector2(-2, -2)
rotation = 0.785398

[node name="itemSprite" type="Sprite2D" parent="HandRoot/PlayerHand"]
position = Vector2(1, -1)
scale = Vector2(0.8, 0.8)
texture = ExtResource("2_sxcrt")
offset = Vector2(8, -8)

[node name="Hand" type="Sprite2D" parent="HandRoot/PlayerHand"]
modulate = Color(1, 0.784314, 0.333333, 1)
position = Vector2(2, -2)
texture = ExtResource("10_pp7um")

[node name="FloorAngles" type="Node2D" parent="."]

[node name="FloorCast1" type="RayCast2D" parent="FloorAngles"]
position = Vector2(-3, 3)
target_position = Vector2(0, 2)
collision_mask = 17
hit_from_inside = true

[node name="FloorCast2" type="RayCast2D" parent="FloorAngles"]
position = Vector2(3, 3)
target_position = Vector2(0, 2)
collision_mask = 17
hit_from_inside = true

[node name="CeilingAngles" type="Node2D" parent="."]

[node name="cCast1" type="RayCast2D" parent="CeilingAngles"]
position = Vector2(-3, -3)
target_position = Vector2(0, -3)
collision_mask = 17

[node name="cCast2" type="RayCast2D" parent="CeilingAngles"]
position = Vector2(3, -3)
target_position = Vector2(0, -3)
collision_mask = 17

[node name="CameraOrigin" type="Node2D" parent="."]
position = Vector2(0, -40)

[node name="Lightmap" parent="." instance=ExtResource("3_37tb5")]
visible = false
top_level = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4n17m")
}

[node name="MouseOver" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseOver"]
shape = SubResource("CircleShape2D_dk4gh")

[node name="ShipCollider" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShipCollider"]
shape = SubResource("RectangleShape2D_jcs3x")

[connection signal="animation_finished" from="HandRoot/handSwing" to="." method="_on_hand_swing_animation_finished"]
